force-app/main/default/objects/Safety_Certification__c/Safety_Certification__c.object-meta.xml
<CustomObject>
    <label>Safety Certification</label>
    <pluralLabel>Safety Certifications</pluralLabel>
    <description>Records individual safety certifications issued to lunar explorers by Lunar Basecamp Outfitters instructors. Tracks certification type, validity period, and pass status.</description>
    <nameField>
        <label>Certification Number</label>
        <type>AutoNumber</type>
        <displayFormat>CERT-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>