force-app/main/default/objects/Safety_Certification__c/fields/Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Type__c</fullName>
    <label>Certification Type</label>
    <type>Picklist</type>
    <description>The specific safety discipline this certification covers, as defined by the Lunar Basecamp Outfitters safety program.</description>
    <inlineHelpText>Select the safety certification module completed by this explorer.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic EVA</fullName>
            </value>
            <value>
                <fullName>Crater Navigation</fullName>
            </value>
            <value>
                <fullName>Emergency Repair</fullName>
            </value>
            <value>
                <fullName>Low-G Climbing</fullName>
            </value>
            <value>
                <fullName>Solar Radiation Protocol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>