force-app/main/default/objects/Safety_Certification__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
    <description>Date after which this certification is no longer valid and the explorer must re-certify before participating in relevant expedition types.</description>
    <inlineHelpText>Expiration date of this certification. Explorers must re-certify before this date to remain eligible.</inlineHelpText>
</CustomField>