force-app/main/default/objects/Safety_Certification__c/fields/Explorer__c.field-meta.xml
<CustomField>
    <fullName>Explorer__c</fullName>
    <label>Explorer</label>
    <type>Lookup</type>
    <referenceTo>Lunar_Explorer__c</referenceTo>
    <relationshipLabel>Safety Certifications</relationshipLabel>
    <relationshipName>Safety_Certifications</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lunar explorer who holds this safety certification.</description>
    <inlineHelpText>Select the explorer this certification belongs to.</inlineHelpText>
</CustomField>