force-app/main/default/objects/Safety_Certification__c/fields/Instructor_Name__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Name__c</fullName>
    <label>Instructor Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Full name of the certified Lunar Basecamp Outfitters instructor who administered and signed off on this certification.</description>
    <inlineHelpText>Full name of the instructor who administered the certification assessment.</inlineHelpText>
</CustomField>