force-app/main/default/objects/Safety_Certification__c/fields/Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Issued_Date__c</fullName>
    <label>Issued Date</label>
    <type>Date</type>
    <description>Date the certification was officially issued to the explorer upon passing the assessment.</description>
    <inlineHelpText>Date the explorer successfully completed and received this certification.</inlineHelpText>
</CustomField>