force-app/main/default/objects/Safety_Certification__c/fields/Pass_Status__c.field-meta.xml
<CustomField>
    <fullName>Pass_Status__c</fullName>
    <label>Pass Status</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the explorer successfully passed the certification assessment. Unchecked records represent failed or pending assessments.</description>
    <inlineHelpText>Check if the explorer passed this certification assessment. Leave unchecked for failed or pending assessments.</inlineHelpText>
</CustomField>